# fs-sim

./: Cargo.toml  LICENSE  README.md
src/: directory.rs  file.rs  main.rs
src/fs/: cli.rs  db.rs  dir.rs  directory.rs  file.rs  fs.rs  lib.rs  usr.rs  utils.rs
src/tests/: test.rs
