[package]
name = "fs-sim"
version = "0.1.0"
edition = "2021"
authors = ["Patryk Strużek <patrykstruzek17@gmail.com>"]
license = "MIT"

[[bin]]
name = "fs-sim"
path = "src/main.rs"

[lib]
name = "fs_lib"
path = "src/fs/lib.rs"

[[test]]
name = "fs_test"
path = "src/tests/test.rs"

[dependencies]
chrono = "0.4"
regex = "1.9.3"
crypto-hash = "0.3.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.27.0"
